--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.30",
     "@types/sequelize": "^4.28.20",
+    "@vitest/coverage-v8": "^3.2.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.3"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
