--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^22.15.30",
     "@types/sequelize": "^4.28.20",
     "@vitest/coverage-v8": "^3.2.3",
+    "sqlite3": "^5.1.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "vitest": "^3.2.3"
