feat: add environments test

--- a/src/environments/.env.test
+++ b/src/environments/.env.test
@@ -1,10 +1,11 @@
 # database
-DB_HOST=
+DB_HOST=127.0.0.1
 DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
-DB_DIALECT=
-
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_NAME=api-rest-ts_db
+DB_DIALECT=sqlite
+DB_STORAGE=:memory:
+DB_LOGGING=false
 # sedeers
-INIT_PASSWORD=
+INIT_PASSWORD=123456
