--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts",
     "db:create": "sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
     "db:reset": "sequelize db:drop && npm run db:create",
-    "test": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:watch" : "vitest --watch"
+    "test:unit": "vitest --exclude '**/integration/*'",
+    "test:unit:coverage": "vitest run --coverage --coverage.exclude '**/database/**' --coverage.exclude '**/interfaces/**' --exclude '**/integration/**'",    
+    "test:watch" : "vitest --watch --exclude '**/integration/*'",
+    "test:integration" : "vitest run --coverage --dir 'src/tests/integration'",
+    "test": "vitest --coverage"
   },
   "keywords": [],
   "author": "",
